articles container overflow fix

--- a/src/app/containers/lg-containers/articles-container/articles-container.component.css
+++ b/src/app/containers/lg-containers/articles-container/articles-container.component.css
@@ -35,6 +35,7 @@ p {
 .inner-container {
   width: 100%;
   height: 100%;
+  overflow-y: auto;
   display: flex;
   padding: 20px;
   flex-direction: column;
